Change button action from test.html to ia.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <i class="fas fa-map-marked-alt"></i> MAPA Y RUTAS
         </button>
         
-        <button class="btn-capitulo" id="btn-ia" onclick="lanzarArchivo('test.html')">
+        <button class="btn-capitulo" id="btn-ia" onclick="lanzarArchivo('ia.html')">
             <i class="fas fa-robot"></i> ASISTENTE IA
         </button>
     </div>
