Change title and welcome heading to MoviTransporte

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>TransitMaster - Puebla</title>
+    <title>MoviTransporte - Puebla</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
@@ -57,7 +57,7 @@
 <body>
 
     <div id="welcome-screen">
-        <h1 style="color: #1E88E5; font-size: 35px; margin-bottom: 5px;">TRANSIT MASTER</h1>
+        <h1 style="color: #1E88E5; font-size: 35px; margin-bottom: 5px;">Movitransporte</h1>
         <p style="opacity: 0.6; margin-bottom: 30px;">Puebla, MX</p>
         
         <button class="btn-capitulo" id="btn-rutas" onclick="lanzarArchivo('mejorasIndex.html')">
